Package_Tools/include-C/flint/in_arbeit/pp/arb.pp


procedure arb_add(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_add_arf(z:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_add_ui(z:Tarb_t; x:Tarb_t; y:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_add_si(z:Tarb_t; x:Tarb_t; y:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_add_fmpz(z:Tarb_t; x:Tarb_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_add_fmpz_2exp(z:Tarb_t; x:Tarb_t; man:Tfmpz_t; exp:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_sub(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_sub_arf(z:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sub_ui(z:Tarb_t; x:Tarb_t; y:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sub_si(z:Tarb_t; x:Tarb_t; y:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_sub_fmpz(z:Tarb_t; x:Tarb_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_mul(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_mul_arf(z:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_mul_si(z:Tarb_t; x:Tarb_t; y:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_mul_ui(z:Tarb_t; x:Tarb_t; y:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_mul_fmpz(z:Tarb_t; x:Tarb_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_addmul(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_addmul_arf(z:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_addmul_si(z:Tarb_t; x:Tarb_t; y:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_addmul_ui(z:Tarb_t; x:Tarb_t; y:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_addmul_fmpz(z:Tarb_t; x:Tarb_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_submul(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_submul_arf(z:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_submul_si(z:Tarb_t; x:Tarb_t; y:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_submul_ui(z:Tarb_t; x:Tarb_t; y:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_submul_fmpz(z:Tarb_t; x:Tarb_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fma(res:Tarb_t; x:Tarb_t; y:Tarb_t; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fma_arf(res:Tarb_t; x:Tarb_t; y:Tarf_t; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fma_si(res:Tarb_t; x:Tarb_t; y:Tslong; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fma_ui(res:Tarb_t; x:Tarb_t; y:Tulong; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fma_fmpz(res:Tarb_t; x:Tarb_t; y:Tfmpz_t; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_dot_simple(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Tarb_srcptr; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_dot_precise(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Tarb_srcptr; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_dot(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Tarb_srcptr; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_approx_dot(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Tarb_srcptr; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_dot_ui(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Pulong; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_dot_si(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Pslong; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_dot_uiui(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Pulong; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_dot_siui(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Pulong; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_dot_fmpz(res:Tarb_t; initial:Tarb_t; subtract:longint; x:Tarb_srcptr; xstep:Tslong; 
            y:Pfmpz; ystep:Tslong; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_div(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_div_arf(z:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_div_si(z:Tarb_t; x:Tarb_t; y:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_div_ui(z:Tarb_t; x:Tarb_t; y:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_div_fmpz(z:Tarb_t; x:Tarb_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fmpz_div_fmpz(z:Tarb_t; x:Tfmpz_t; y:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_ui_div(z:Tarb_t; x:Tulong; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_div_arf_newton(res:Tarb_t; x:Tarb_t; y:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_div_newton(res:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_fmpz_divapprox(res:Tfmpz_t; x:Tfmpz_t; y:Tfmpz_t);cdecl;external;
(* Const before type ignored *)
procedure arb_inv(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_set_fmpq(y:Tarb_t; x:Tfmpq_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrt(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrt_arf(z:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrt_fmpz(z:Tarb_t; x:Tfmpz_t; prec:Tslong);cdecl;external;
procedure arb_sqrt_ui(z:Tarb_t; x:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrtpos(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_hypot(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_rsqrt(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_rsqrt_ui(z:Tarb_t; x:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrt1pm1(r:Tarb_t; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_rsqrt_arf_newton(res:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrt_arf_newton(res:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqrt_newton(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_pow_fmpz_binexp(y:Tarb_t; b:Tarb_t; e:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_pow_fmpz(y:Tarb_t; b:Tarb_t; e:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_pow_ui(y:Tarb_t; b:Tarb_t; e:Tulong; prec:Tslong);cdecl;external;
procedure arb_ui_pow_ui(y:Tarb_t; b:Tulong; e:Tulong; prec:Tslong);cdecl;external;
procedure arb_si_pow_ui(y:Tarb_t; b:Tslong; e:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_pow_fmpq(y:Tarb_t; x:Tarb_t; a:Tfmpq_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_div_2expm1_ui(z:Tarb_t; x:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_pow(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_root_ui(z:Tarb_t; x:Tarb_t; k:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_root(z:Tarb_t; x:Tarb_t; k:Tulong; prec:Tslong);cdecl;external;
{ back compat  }
(* Const before type ignored *)
procedure arb_log(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_log_arf(z:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
procedure arb_log_ui(z:Tarb_t; x:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_log_fmpz(z:Tarb_t; x:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_log1p(r:Tarb_t; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_log_base_ui(res:Tarb_t; x:Tarb_t; b:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_log_hypot(res:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_exp(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_expm1(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_exp_invexp(z:Tarb_t; w:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin(s:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_cos(c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos(s:Tarb_t; c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_pi(s:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_cos_pi(c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
